GTK+-3.20 A&R: fix jumping menuitem

--- a/usr/share/themes/Ambiant-MATE/gtk-3.0/gtk-widgets-borders.css
+++ b/usr/share/themes/Ambiant-MATE/gtk-3.0/gtk-widgets-borders.css
@@ -1,6 +1,6 @@
 /* Borders */
-.menubar menuitem:hover,
-menubar menuitem:hover {
+.menubar > menuitem:hover,
+menubar > menuitem:hover {
     border: 1px solid #2e2e2c;
     border-bottom-width: 0px;
     border-radius: 4px 4px 0 0;
