--- a/usr/share/themes/Ambiant-MATE/gtk-3.0/gtk-widgets.css
+++ b/usr/share/themes/Ambiant-MATE/gtk-3.0/gtk-widgets.css
@@ -886,6 +886,7 @@ menubar menuitem:hover,
 menubar > menuitem,
 .menubar > menuitem {
     padding: 3px 5px 3px 5px;
+    border: 1px solid transparent;
 }
 
 /************
