--- a/usr/share/themes/Radiant-MATE/gtk-3.0/gtk-widgets.css
+++ b/usr/share/themes/Radiant-MATE/gtk-3.0/gtk-widgets.css
@@ -917,6 +917,12 @@ menubar menuitem:hover,
     text-shadow: 0 -1px shade (@dark_bg_color, 0.7);
 }
 
+menubar > menuitem,
+.menubar > menuitem {
+    padding: 3px 5px 3px 5px;
+    border: 1px solid transparent;
+}
+
 /************
  * menuitem *
  ************/
